k8s/ingress-jitsi-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-web-ingress
  namespace: jitsi-meet
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: meet.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jitsi-web-service
                port:
                  number: 80
